# twitter-clone-rs

./: .env  Cargo.toml  README.md  domain.drawio  domain.ipynb  server.crt  server.key
clients/web/: Cargo.toml  Trunk.toml
clients/web/src/: main.rs
migrations/2021-07-04-234926_create_users/: up.sql
src/: auth_actor.rs  main.rs
