[package]
name = "twitter_clone_web_client"
version = "0.1.0"
authors = ["Tristan Godfrey <tristan@godfrey.nl>"]
edition = "2018"

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = { version = "0.4" }
yew = "0.18"
web-sys = { version = "0.3", features = ["PublicKeyCredentialUserEntity", "CredentialCreationOptions", "Navigator", "Window", "CredentialsContainer", "PublicKeyCredentialRpEntity", "PublicKeyCredentialCreationOptions", "PublicKeyCredential", "AuthenticatorResponse", "AuthenticationExtensionsClientOutputs", "CredentialRequestOptions"] }
js-sys = "0.3"
anyhow = "1"
# serde = "1.0"
serde_json = "1.0"
webauthn-rs = { version = "0.3.0-alpha.7", default-features = false, features = ["wasm"] }

